--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spark | 灵感与代码保险库</title>
+    <link rel="icon" type="image/svg+xml"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%234f46e5' stroke-width='2.5' stroke-linecap='round' stroke-linejoin='round'><path d='M13 10V3L4 14h7v7l9-11h-7z'/></svg>">
     <!-- 核心依赖 -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- 注意：Tailwind CDN 仅用于开发，生产环境请使用 PostCSS 或 CLI -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <!-- Highlight.js -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css" id="hljs-light-theme">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css" id="hljs-dark-theme" media="none">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css"
+        id="hljs-light-theme">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css"
+        id="hljs-dark-theme" media="none">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>
         // 配置 Tailwind 支持暗黑模式
@@ -88,7 +92,9 @@
                     class="p-2 rounded-lg transition btn-press hover:bg-gray-100 dark:hover:bg-white/10 text-gray-600 dark:text-gray-400"
                     title="GitHub仓库">
                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                        <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
+                        <path fill-rule="evenodd"
+                            d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
+                            clip-rule="evenodd"></path>
                     </svg>
                 </a>
 
@@ -97,7 +103,8 @@
                     class="p-2 rounded-lg transition btn-press">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path>
+                            d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4">
+                        </path>
                     </svg>
                 </button>
             </div>
@@ -173,7 +180,8 @@
                         <!-- 代码编辑器网格 -->
                         <div v-else class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
                             <div v-for="s in filteredSnippets" :key="s.id"
-                                class="editor-window rounded-lg border-gray-200 dark:border-white/5 bg-white dark:bg-[#1c1c1e] shadow-sm flex flex-col relative" style="height: auto; min-height: 300px; max-height: 400px;">
+                                class="editor-window rounded-lg border-gray-200 dark:border-white/5 bg-white dark:bg-[#1c1c1e] shadow-sm flex flex-col relative"
+                                style="height: auto; min-height: 300px; max-height: 400px;">
                                 <!-- macOS 标题栏 -->
                                 <div
                                     class="px-4 py-3 flex items-center border-b border-gray-100 dark:border-white/5 shrink-0 bg-gray-50/50 dark:bg-[#2c2c2e]/50">
@@ -193,7 +201,8 @@
                                 <!-- 代码区 -->
                                 <div class="relative flex-grow overflow-hidden group/code bg-white dark:bg-[#000000]">
                                     <pre class="code-font text-sm p-5 h-full overflow-hidden leading-relaxed cursor-pointer transition-colors hljs"
-                                        @click="copy(s.code)" style="overflow-x: hidden; overflow-y: hidden;"><code :class="'language-' + getLanguageAlias(s.lang)" v-html="highlightCode(s.code, s.lang)"></code></pre>
+                                        @click="copy(s.code)"
+                                        style="overflow-x: hidden; overflow-y: hidden;"><code :class="'language-' + getLanguageAlias(s.lang)" v-html="highlightCode(s.code, s.lang)"></code></pre>
                                     <div
                                         class="absolute inset-0 bg-indigo-500/5 opacity-0 group-hover/code:opacity-100 transition-all flex items-center justify-center backdrop-blur-[1px]">
                                         <button @click.stop="copy(s.code)"
@@ -207,7 +216,8 @@
                                     class="px-4 py-2.5 border-t border-gray-100 dark:border-white/5 flex items-center justify-between shrink-0 bg-gray-50/50 dark:bg-[#141417] relative">
                                     <div class="flex flex-wrap gap-2 overflow-hidden">
                                         <button v-for="tag in s.tags" :key="tag" @click="toggleTag(tag)"
-                                            class="text-xs font-bold text-gray-400 hover:text-indigo-500 transition-colors uppercase">#{{ tag }}</button>
+                                            class="text-xs font-bold text-gray-400 hover:text-indigo-500 transition-colors uppercase">#{{
+                                            tag }}</button>
                                     </div>
                                     <!-- 编辑和删除按钮 - 右下角 -->
                                     <div class="flex gap-2 ml-4 shrink-0">
@@ -323,8 +333,7 @@
             <div v-if="modal.show"
                 class="fixed inset-0 z-[150] flex items-center justify-center p-4 bg-black/80 backdrop-blur-sm overflow-y-auto"
                 @click="langDropdownOpen = false">
-                <div
-                    class="rounded-2xl shadow-2xl w-full max-w-2xl flex flex-col max-h-[90vh] overflow-hidden border border-gray-200 dark:border-white/10 bg-white dark:bg-[#1c1c1e] transition-colors"
+                <div class="rounded-2xl shadow-2xl w-full max-w-2xl flex flex-col max-h-[90vh] overflow-hidden border border-gray-200 dark:border-white/10 bg-white dark:bg-[#1c1c1e] transition-colors"
                     @click.stop>
                     <div
                         class="px-8 py-6 border-b border-gray-100 dark:border-white/5 flex justify-between items-center bg-gray-50/50 dark:bg-black/20 shrink-0">
@@ -355,17 +364,20 @@
                                             :class="getLangColorDot(form.lang)"></div>
                                         <span>{{ getLangLabel(form.lang) }}</span>
                                     </button>
-                                    <svg class="absolute right-4 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 pointer-events-none" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                                    <svg class="absolute right-4 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 pointer-events-none"
+                                        fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M19 9l-7 7-7-7"></path>
                                     </svg>
                                     <transition name="view-fade">
-                                        <div v-if="langDropdownOpen" 
+                                        <div v-if="langDropdownOpen"
                                             class="absolute z-50 w-full mt-1 bg-white dark:bg-[#1c1c1e] border border-gray-200 dark:border-white/10 rounded-lg shadow-lg overflow-hidden">
                                             <button v-for="option in langOptions" :key="option.value"
                                                 @click="form.lang = option.value; langDropdownOpen = false"
                                                 :class="form.lang === option.value ? 'bg-indigo-50 dark:bg-indigo-900/20 text-indigo-600 dark:text-indigo-400' : 'text-gray-900 dark:text-gray-100 hover:bg-gray-50 dark:hover:bg-white/5'"
                                                 class="w-full px-4 py-3 flex items-center gap-3 text-left text-sm font-semibold transition">
-                                                <div class="w-3 h-3 rounded-full flex-shrink-0" :class="getLangColorDot(option.value)"></div>
+                                                <div class="w-3 h-3 rounded-full flex-shrink-0"
+                                                    :class="getLangColorDot(option.value)"></div>
                                                 <span>{{ option.label }}</span>
                                             </button>
                                         </div>
