--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 
             <!-- 右侧功能区 -->
             <div class="flex items-center gap-3 shrink-0">
-                <button v-if="isConnected && currentView === 'list'" @click="openModal('add')"
-                    class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-1.5 rounded-lg text-xs font-bold transition btn-press shadow-lg shadow-indigo-500/20">
+                <button v-if="currentView === 'list'" @click="openModal('add')" :disabled="!isConnected"
+                    :class="isConnected ? 'bg-indigo-600 hover:bg-indigo-700 text-white cursor-pointer' : 'bg-gray-400 text-gray-200 cursor-not-allowed opacity-50'"
+                    class="px-4 py-1.5 rounded-lg text-xs font-bold transition shadow-lg shadow-indigo-500/20">
                     {{ t('newSnip') }}
                 </button>
 
@@ -437,6 +438,37 @@
                         class="w-full py-4 font-black rounded-lg transition btn-press tracking-widest text-[10px] uppercase bg-indigo-600 text-white hover:bg-indigo-700">
                         {{ t('copyDismiss') }}
                     </button>
+                </div>
+            </div>
+        </transition>
+
+        <!-- 删除确认对话框 -->
+        <transition name="view-fade">
+            <div v-if="confirmModal.show"
+                class="fixed inset-0 z-[200] flex items-center justify-center p-4 bg-black/90 backdrop-blur-md">
+                <div
+                    class="rounded-2xl border border-gray-200 dark:border-white/10 shadow-2xl w-full max-w-lg p-12 text-center bg-white dark:bg-[#1c1c1e]">
+                    <div
+                        class="w-14 h-14 bg-red-600 rounded-xl flex items-center justify-center text-white mx-auto mb-8 shadow-lg">
+                        <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
+                            </path>
+                        </svg>
+                    </div>
+                    <h3 class="text-xl font-black mb-4 uppercase tracking-wider italic">{{ t('confirmDelete') }}</h3>
+                    <p class="text-xs text-gray-500 mb-8 leading-relaxed font-medium px-4 opacity-80">{{
+                        t('confirmDeleteDesc') }}</p>
+                    <div class="flex gap-4">
+                        <button @click="cancelDelete"
+                            class="flex-1 py-4 font-black rounded-lg transition btn-press tracking-widest text-[10px] uppercase bg-gray-100 dark:bg-white/10 text-gray-700 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-white/20">
+                            {{ t('cancel') }}
+                        </button>
+                        <button @click="confirmDelete"
+                            class="flex-1 py-4 font-black rounded-lg transition btn-press tracking-widest text-[10px] uppercase bg-red-600 text-white hover:bg-red-700">
+                            {{ t('confirm') }}
+                        </button>
+                    </div>
                 </div>
             </div>
         </transition>
